fixed shadow covering delete popup confirmation box

--- a/app/assets/stylesheets/components/_start_index.scss
+++ b/app/assets/stylesheets/components/_start_index.scss
@@ -4,6 +4,10 @@
   margin-top: 0px;
 }
 
+.modal-backdrop {
+  z-index: 6;
+}
+
 .index-dropdown {
   position: fixed;
   z-index: 6;
